--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Résumé Hugo Theme # Website name
-baseURL: 'https://example.com/' # Website URL
+title: He (Shawn) Shuang's Personal Site # Website name
+baseURL: 'https://8759s.github.io/' # Website URL
 
 ############################
 ## LANGUAGE
