--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,8 +23,9 @@ marketing:
     fathom: ''
     pirsch: ''
   verification:
-    google: ''
+    google: 'klINrWJjYY6Y9qt4Z-z-0PFdAK7UNM_Drv2HuULI3VE'
     baidu: ''
+
 
 # Site header
 header:
