--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -17,7 +17,7 @@ marketing:
     description: 'PhD Candidate in Computer Security at the University of Toronto'
     # twitter: 'GetResearchDev'
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-FGP3M3KECG'
     baidu_tongji: ''
     plausible: ''
     fathom: ''
