--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'PhD Candidate in Computer Security at the University of Toronto'
+    description: 'Web security researcher'
     # twitter: 'GetResearchDev'
   analytics:
     google_analytics: 'G-FGP3M3KECG'
