--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,6 @@ main:
   - name: Publications
     url: publications/
     weight: 11
-  # - name: Experience
-  #   url: experience/
-  #   weight: 12
+  - name: Experience
+    url: experience/
+    weight: 12
